# ai-gmail-summarizer

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/commands/: summarize-gmail.md
profiles/example/: config.yaml  cv.md  matcher_instructions.md
src/gmail_summarizer/: classifier.py  config.py  gmail.py  link_extractor.py  main.py  matcher.py  report.py  scraper.py
tests/: test_config.py  test_gmail.py  test_link_extractor.py  test_main.py  test_report.py  test_scraper.py
tools/: gmail_mark_read.py  gmail_send.py
